# CPro

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_warnings_and_stage_to_jobs.py
backend/app/: main.py
backend/app/api/v1/: jobs.py  router.py  translate.py
backend/app/core/: config.py  database.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/models/: __init__.py  job.py  pipeline_log.py  user.py
backend/app/pipeline/: balloon_parser.py  base.py  detector.py  inpainter.py  ocr_engine.py  orchestrator.py  postprocessor.py  preprocessor.py  translation_mapper.py  translation_prep.py  translator.py  typesetter.py
backend/app/schemas/: job.py  pipeline.py  translation.py
backend/app/services/: circuit_breaker.py  cost_tracker.py  job_service.py
backend/app/utils/: file_validation.py  security.py
backend/tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_cost_tracker.py  test_pipeline.py  test_translator.py  test_typesetter.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/result/[jobId]/: page.tsx
frontend/src/components/: ImageUploader.tsx  ProcessingStatus.tsx  ResultViewer.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/lib/: api.ts  types.ts
shared/: config.py  constants.py
